# KI_Robot

./: CHANGELOG.md  README.md  bringup.sh  ros_config.sh
deb/: blacklist.env  install_debs.sh  remove_debs.sh  ros-melodic-battery-estimation_1.1.1-0bionic_amd64.deb  ros-melodic-charge-manager_1.1.0-0bionic_amd64.deb  ros-melodic-dh-gripper-driver_0.0.0-0bionic_amd64.deb  ros-melodic-dh-gripper-msgs_0.0.1-0bionic_amd64.deb  ros-melodic-dh-pgc140-urdf_1.0.0-0bionic_amd64.deb  ros-melodic-dh3-urdf_1.0.0-0bionic_amd64.deb  ros-melodic-image-filter_1.1.0-0bionic_amd64.deb  ros-melodic-marker-mapping_1.0.0-0bionic_amd64.deb  ros-melodic-multimap-server-msgs_0.0.0-0bionic_amd64.deb  ros-melodic-poi-manager-msgs_0.1.0-0bionic_amd64.deb  ros-melodic-procedures-msgs_1.0.3-0bionic_amd64.deb  ros-melodic-procedures-test-msgs_1.6.0-0bionic_amd64.deb  ros-melodic-procedures_1.6.0-0bionic_amd64.deb  ros-melodic-rcomponent_1.2.0-0bionic_amd64.deb  (+34 more)
project/rbkairos_darko_description/: CMakeLists.txt  package.xml
project/rbkairos_darko_description/meshes/devices/: pan_dynamixel.stl  projector.stl  tilt_dynamixel.stl
project/rbkairos_darko_description/meshes/structures/: basler.stl  pole_base.stl  pole_sup.stl
project/rbkairos_darko_description/robots/: rbkairos_panda_plus.urdf.xacro  sxlsk-210727ac.urdf.xacro
project/rbkairos_darko_description/urdf/arm/: panda_arm.xacro
project/rbkairos_darko_description/urdf/devices/: basler.urdf.xacro  pantilt.urdf.xacro
project/rbkairos_darko_description/urdf/structures/: projector.urdf.xacro  telescopic_pole.urdf.xacro
(+135 files in other folders)
