<?xml version="1.0"?>
<package format="2">
  <name>rbkairos_darko_description</name>
  <version>0.0.0</version>
  <description>The rbkairos_darko_description package</description>

  <maintainer email="aarnal@robotnik.es">Alejandro Arnal Espinola</maintainer>

  <license>BSD</license>

  <author email="aarnal@robotnik.es">Alejandro Arnal Espinola</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>robotnik_sensors</build_depend>
  <build_depend>franka_description</build_depend>
  
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robotnik_sensors</exec_depend>
  <exec_depend>franka_description</exec_depend>
  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
